@@ -10,8 +10,6 @@
 		<div class="title">About</div> 
 		<ul class="menu">	
 			<li><a href = 'http://andyjtran.com/'>Home</a></li>
-			<li><a href = 'http://andyjtran.com/blog'>Blog</a></li>
-			<li><a href = 'http://andyjtran.com/projects'>Projects</a></li>
 			<li><a href = 'http://andyjtran.com/AndyT.Resume.pdf' target="_blank">Resume</a></li>
 		</ul>
 	</header>
