@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Armata|Carme' rel='stylesheet' type='text/css'>
 	<title>Andy Tran</title>
@@ -8,16 +9,20 @@
 <body>
 	<header>
 		<div class="title">Andy Tran</div> <!--add space between image and name-->
-		<ul class="menu">	
-			<li><a href = 'http://andyjtran.com/about'>About</a></li>
-			<li><a href = 'http://andyjtran.com/blog'>Blog</a></li>
-			<li><a href = 'http://andyjtran.com/projects'>Projects</a></li>
-		</ul>
+		<nav>
+			<ul class="menu">	
+				<li>
+				<a href="/about">About</a>
+				</li>
+				<li><a href = 'http://andyjtran.com/blog'>Blog</a></li>
+				<li><a href = 'http://andyjtran.com/projects'>Projects</a></li>
+			</ul>
+		</nav>
 	</header>
-	<img src= "underconstruction.jpg">
+	<img src= "underconstruction.jpg" alt="Under Construction">
 	<div class="footer">
         <small>Hosted on <a href="http://pages.github.com">GitHub Pages</a>
-		<br>Last updated on <a href='http://andyjtran.com/changelog.txt'>2 September 2013</br></small>
-      </div>
+		<br>Last updated on <a href='http://andyjtran.com/changelog.txt'>2 September 2013</a></small>
+    </div>
 </body>
 </html>
